--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "ext-json": "*",
+        "anhskohbo/no-captcha": "^3.1",
+        "arcanedev/no-captcha": "^5.0",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0",
-        "ext-json": "*"
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
